# ai-vocabulary-builder

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  noxfile.py  pyproject.toml
.github/workflows/: main.yml  python-publish.yml
docs/: README_zh.md  integrations.md
infra/docker/: Dockerfile  docker-compose.yml
tests/: conftest.py  test_builder.py  test_interactive.py  test_models.py  test_openai.py  test_openai_svc.py  test_store.py  test_utils.py  test_version.py  test_voc_builder.py
tests/api/: conftest.py  test_export.py
tests/builder/: test_ai_svc.py  test_models.py
tests/commands/: test_export.py  test_parses.py  test_remove.py
tests/common/: test_text.py
tests/infras/: test_store.py
tests/misc/: test_version.py
tests/system/: test_options.py
voc_builder/: ai_svc.py  builder.py  config.py  constants.py  exceptions.py  export.py  interactive.py  main.py  models.py  openai_svc.py  store.py  utils.py  version.py
voc_builder/builder/: ai_svc.py  models.py  serializers.py  views.py
voc_builder/commands/: exceptions.py  export.py  parsers.py  remove.py
voc_builder/common/: errors.py
voc_builder/infras/: ai.py  config.py  store.py
voc_builder/int_commands/: __init__.py  remove.py
voc_builder/learn/: ai_svc.py  serializers.py  views.py
voc_builder/misc/: export.py  version.py
voc_builder/notepad/: errors.py  serializers.py  server.py  std_err.py
voc_builder/system/: constants.py  language.py  models.py  serializers.py  views.py
voc_builder/system/services/: __init__.py  options.py
voc_frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
voc_frontend/src/: App.vue  main.ts
voc_frontend/src/common/: basic.ts  text.ts  ui.js
voc_frontend/src/components/: LearnNav.vue  RecentWords.vue  WordCardRich.vue
voc_frontend/src/router/: index.ts
voc_frontend/src/scss/: styles.scss
voc_frontend/src/views/: HomeView.vue  LearnView.vue  ManageView.vue  MasteredWordsView.vue  QuizView.vue  Settings.vue  StoryView.vue
