[tool.poetry]
name = "ai-vocabulary-builder"
version = "0.0.1"
description = "A tool help you build your vocabulary book using AI."
authors = ["piglei <piglei2007@gmail.com>"]
packages = [
    { include = "voc_builder", from="." },
]


[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
click = "^8.0.0"
openai = "^0.27.0"
rich = "^13.0.0"

[tool.poetry.dev-dependencies]
pytest = "==7.2.2"

[tool.poetry.scripts]
aivoc = "voc_builder.main:main"

[[tool.poetry.source]]
default = true
name = "tencent-mirror"
url = "https://mirrors.tencent.com/pypi/simple/"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
